settings: Fix upload spinner alignment in image upload widgets.
The upload spinners for all of the image upload widgets were in
wrong alignment due to the use of magic numbers to center them.

This commit replaces the above mentioned approach with the use
of flexbox to fix alignment issues across all the image upload widgets.

--- a/static/styles/image_upload_widget.css
+++ b/static/styles/image_upload_widget.css
@@ -95,6 +95,9 @@
     }
 
     .upload-spinner-background {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         background-color: hsl(0, 0%, 10%);
         font-size: 0.8rem;
         width: 100%;
@@ -109,7 +112,6 @@
     .image_upload_spinner {
         position: absolute;
         z-index: 99;
-        display: block;
     }
 
     &:hover {
@@ -155,13 +157,6 @@
         font-size: 3rem;
     }
 
-    .image_upload_spinner {
-        top: 40%;
-        right: 40%;
-        width: 50px;
-        height: 50px;
-    }
-
     .image-block {
         border-radius: 5px;
         box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.1);
@@ -189,13 +184,6 @@
     height: 100px;
     border-radius: 5px;
     box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.1);
-
-    .image_upload_spinner {
-        width: 40px;
-        height: 40px;
-        top: 30%;
-        right: 30%;
-    }
 }
 
 .realm-icon-section {
@@ -209,17 +197,6 @@
     width: 220px;
     height: 55px;
     text-align: center;
-
-    .upload-spinner-background {
-        left: 0;
-    }
-
-    .image_upload_spinner {
-        width: 45px;
-        height: 55px;
-        top: 5%;
-        right: 40%;
-    }
 
     .image-delete-button {
         top: 5px;
